--- a/9.ipynb
+++ b/9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b869f1b6",
    "metadata": {},
    "outputs": [
@@ -10,26 +10,84 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "Treasure found!\n",
+      "Path taken:\n",
+      "(0, 0)\n",
+      "(0, 1)\n",
+      "(0, 2)\n",
+      "(0, 3)\n",
+      "(0, 4)\n",
+      "(1, 4)\n",
+      "(2, 4)\n",
+      "(3, 4)\n",
+      "(4, 4)\n"
      ]
     }
    ],
    "source": [
-    "print('hello world')"
+    "import heapq\n",
+    "\n",
+    "ROWS, COLS = 5, 5\n",
+    "\n",
+    "start = (0, 0)\n",
+    "treasure = (4, 4)\n",
+    "\n",
+    "def manhattan_distance(current, goal):\n",
+    "    return abs(current[0] - goal[0]) + abs(current[1] - goal[1])\n",
+    "\n",
+    "def best_first_search(start, treasure):\n",
+    "    open_list = []\n",
+    "    heapq.heappush(open_list, (manhattan_distance(start, treasure), start))\n",
+    "\n",
+    "    visited = set()\n",
+    "    parent = {}\n",
+    "\n",
+    "    while open_list:\n",
+    "        _, current = heapq.heappop(open_list)\n",
+    "\n",
+    "        if current in visited:\n",
+    "            continue\n",
+    "\n",
+    "        visited.add(current)\n",
+    "\n",
+    "        if current == treasure:\n",
+    "            print(\"Treasure found!\")\n",
+    "            return reconstruct_path(parent, start, treasure)\n",
+    "\n",
+    "        x, y = current\n",
+    "\n",
+    "        directions = [(-1,0), (1,0), (0,-1), (0,1)]\n",
+    "\n",
+    "        for dx, dy in directions:\n",
+    "            nx, ny = x + dx, y + dy\n",
+    "            neighbor = (nx, ny)\n",
+    "\n",
+    "            if 0 <= nx < ROWS and 0 <= ny < COLS and neighbor not in visited:\n",
+    "                parent[neighbor] = current\n",
+    "                h = manhattan_distance(neighbor, treasure)\n",
+    "                heapq.heappush(open_list, (h, neighbor))\n",
+    "\n",
+    "    print(\"Treasure not found\")\n",
+    "    return None\n",
+    "\n",
+    "def reconstruct_path(parent, start, treasure):\n",
+    "    path = [treasure]\n",
+    "    while path[-1] != start:\n",
+    "        path.append(parent[path[-1]])\n",
+    "    path.reverse()\n",
+    "    return path\n",
+    "\n",
+    "path = best_first_search(start, treasure)\n",
+    "\n",
+    "print(\"Path taken:\")\n",
+    "for step in path:\n",
+    "    print(step)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "500c7069",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
